need to defines Km...

--- a/src/lithium/doc/lithium.tex
+++ b/src/lithium/doc/lithium.tex
@@ -48,7 +48,7 @@ We suppose the following mechanism
 	k_f^6 [\lbrace\mychem{Li}^6E\rbrace_{out}] - (k_r^6+k_t^6) [\lbrace\mychem{Li}^6E\rbrace_{in}]
 	\\
 	\partial_t[\lbrace\mychem{Li}^7E\rbrace_{in}] & = & 
-	k_7^6 [\lbrace\mychem{Li}^6E\rbrace_{out}] - (k_r^7+k_t^7) [\lbrace\mychem{Li}^7E\rbrace_{in}]
+	k_f^7 [\lbrace\mychem{Li}^6E\rbrace_{out}] - (k_r^7+k_t^7) [\lbrace\mychem{Li}^7E\rbrace_{in}]
 	\\
 	\end{array}
 	\right. 
