--- a/src/lithium/doc/lithium.tex
+++ b/src/lithium/doc/lithium.tex
@@ -38,12 +38,12 @@ We suppose the following mechanism
 	\partial_t[\lbrace\mychem{Li}^6E\rbrace_{out}] & = & 
 	k_a^6[\mathtt{Li}^6_{out}][E] - (k_d^6+k_f^6) [\lbrace\mychem{Li}^6E\rbrace_{out}]
 	+k_r^6[\lbrace\mychem{Li}^6E\rbrace_{in}]
-	= k_a^6 \left([\mathtt{Li}^6_{out}][E] -K_m^6 [\lbrace\mychem{Li}^6E\rbrace_{out}] + C_6 [\lbrace\mychem{Li}^6E\rbrace_{in}\right)
+	= k_a^6 \left([\mathtt{Li}^6_{out}][E] -K_m^6 [\lbrace\mychem{Li}^6E\rbrace_{out}] + J_m^6 [\lbrace\mychem{Li}^6E\rbrace_{in}]\right)
 	\\
 	\partial_t[\lbrace\mychem{Li}^7E\rbrace_{out}] & = & 
 	k_a^7[\mathtt{Li}^7_{out}][E] - (k_d^7+k_f^7) [\lbrace\mychem{Li}^7E\rbrace_{out}]
 	+k_r^7[\lbrace\mychem{Li}^7E\rbrace_{in}]
-	= k_a^7 \left([\mathtt{Li}^7_{out}][E] -K_m^7 [\lbrace\mychem{Li}^7E\rbrace_{out}] + C_7 [\lbrace\mychem{Li}^7E\rbrace_{in}\right)
+	= k_a^7 \left([\mathtt{Li}^7_{out}][E] -K_m^7 [\lbrace\mychem{Li}^7E\rbrace_{out}] + J_m^7 [\lbrace\mychem{Li}^7E\rbrace_{in}\right)
 	\\
 	\\
 	\partial_t[\lbrace\mychem{Li}^6E\rbrace_{in}] & = & 
@@ -67,6 +67,23 @@ and
 	+ [\lbrace\mychem{Li}^7E\rbrace_{out}]
 	+ [\lbrace\mychem{Li}^6E\rbrace_{in}]
 	+ [\lbrace\mychem{Li}^7E\rbrace_{in}]
+\end{equation}
+We first obtain
+\begin{equation}
+	\left\lbrace
+	\begin{array}{rcl}
+	~[\lbrace\mychem{Li}^6E\rbrace_{out}] & = & \alpha_6 [\lbrace\mychem{Li}^6E\rbrace_{in}]\\%
+	~[\lbrace\mychem{Li}^7E\rbrace_{out}] & = & \alpha_7 [\lbrace\mychem{Li}^7E\rbrace_{in}]\\
+	\end{array}
+	\right.
+\end{equation}
+so that we have three remaining equations
+\begin{equation}
+	\left\lbrace
+	\begin{array}{rcl}
+	0 & = & 
+	\end{array}
+	\right.
 \end{equation}
 
 \end{document}
