--- a/src/lithium/doc/lithium2.tex
+++ b/src/lithium/doc/lithium2.tex
@@ -13,15 +13,16 @@
 \begin{document}
 
 \begin{equation}
-	 \mychem{Li}_{out}^{x} +  \mychem{E}_{out}  
+	 \mychem{Li}^{x} +  \mychem{E}  
 	 \xrightleftharpoons[k_d^x]{k_a^x} 
 	 \left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{out} 
 	  \xrightleftharpoons[k_r^x]{k_f^x} 
 	  \left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in}  
-	   \xrightarrow[-\mychem{H}^+_{in},+\mychem{H}^+_{out}]{k_E^x} \mychem{E}_{out}  + \mychem{Li}_{in}^{x}
+	   \xrightarrow[-\mychem{H}^+_{in},+\mychem{H}^+_{out}]{k_E^x} \mychem{E}  + \mychem{Li}_{in}^{x}
 \end{equation}
 
 \begin{equation}
+\left\lbrace
 \begin{array}{rcl}
 	\partial_t \myconc{\mychem{Li}_{in}^x} & = & k_E^x \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in} } \\
 	\partial_t \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in} } & = & 
@@ -31,15 +32,16 @@
 	\partial_t \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{out} } & = &
 	-\left(k_d^x+k_f^x\right) \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{out} } 
 	+k_r^x \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in} }
-	+k_a^x \myconc{\mychem{Li_{out}^x}} \myconc{E_{out}}
+	+k_a^x \myconc{\mychem{Li^x}} \myconc{E}
 	\\
-	\partial_t  \myconc{E_{out}} & = & k_E^x \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in} }
-	+k_d^x \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{out} }
-		-k_a^x \myconc{\mychem{Li_{out}^x}} \myconc{E_{out}}
-	\\
-	E_0 & = & \myconc{E_{out}} + \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in} } 
+%	\partial_t  \myconc{E} & = & k_E^x \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in} }
+%	+k_d^x \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{out} }
+%		-k_a^x \myconc{\mychem{Li_{out}^x}} \myconc{E}
+%	\\
+	E_0 & = & \myconc{E} + \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{in} } 
 	+ \myconc{\left\lbrace\mychem{Li}^{x}\mychem{E}\right\rbrace_{out} }\\
 \end{array}
+\right.
 \end{equation}
 
 
