--- a/src/lithium/doc/lithium2.tex
+++ b/src/lithium/doc/lithium2.tex
@@ -83,6 +83,7 @@ and finally
 and
 \begin{equation}
 	\partial_t \myconc{\mychem{Li}^{in}_x} = V_x \dfrac{\phi}{\phi K_E^x + K_M^x}
+	\dfrac{\myconc{Li_x}}{1+\Lambda_6 \myconc{\mychem{Li_6}} + \Lambda_7 \myconc{\mychem{Li_7}}}
 \end{equation}
 
 \end{document}
