--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -21,7 +21,7 @@
 \newcommand{\Hin}{\myconc{\mychem{H}}}
 
 \begin{document}
-
+\section{Mechanism}
 \begin{equation}
 	 \mychem{Li}_{x} +  \mychem{E}  
 	 \xrightleftharpoons[k_d^x]{k_a^x} 
@@ -31,6 +31,7 @@
 	  \xrightleftharpoons[k_q^x]{\mychem{H}_i,\;k_p^x} \underbrace{\mychem{EH}_{in}}_{\xrightarrow[]{k_h} \mychem{E} + \mychem{H}_{out}} + \mychem{Li}_{x}^{in}
 \end{equation}
 
+\section{Full System}
 \begin{equation}
 \displaystyle
 \left\lbrace
@@ -80,6 +81,26 @@ The steady state concentrations are given by
 	0\\
 	\end{pmatrix}
 \end{equation}
+
+\section{One Lithium Only}
+\begin{equation}
+\displaystyle
+\left\lbrace
+\begin{array}{rcl}
+\partial_t\LiIn{\nu}   & = & k_p^\nu \myconc{\mychem{H}}_{in} \LiEin{\nu} - k_q^x \EHin \LiIn{\nu} \\
+\\
+\partial_t \EHin     & = & \left( k_p^\nu \Hin \LiEin{\nu} - k_q^\nu \EHin \LiIn{\nu}\right) - k_h \EHin \\
+\\
+\partial_t \LiEin{\nu} & = & -k_p^\nu \Hin \LiEin{\nu} + k_q^\nu \EHin \LiIn{\nu}
++ k_f^\nu \LiEout{\nu} - k_r^\nu \LiEin{\nu}\\
+\\
+\partial_t \LiEout{\nu} & = & k_r^\nu \LiEin{\nu} - (k_f^\nu+k_d^\nu) \LiEout{\nu} + k_a^\nu \LiOut{\nu} \Eout \\
+\\
+E_0 & = & \Eout + \EHin + \LiEin{\nu} + \LiEout{\nu}\\
+\end{array}
+\right.
+\end{equation}
+
 
 \end{document}
 
