--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -100,7 +100,33 @@ E_0 & = & \Eout + \EHin + \LiEin{\nu} + \LiEout{\nu}\\
 \end{array}
 \right.
 \end{equation}
+We use the vector of unknowms
+\begin{equation}
+\vec{Y}_\nu = 
+	\begin{pmatrix}
+	\Eout\\
+	\EHin\\
+	\LiEin{\nu}\\
+	\LiEout{\nu}
+	\end{pmatrix}
+\end{equation}
+We have the matrix such that
+\begin{equation}
+	M_\nu \cdot \vec{Y}_\nu = 
+	\begin{pmatrix}
+	E_0\\
+	0\\
+	0\\
+	0
+	\end{pmatrix}
+\end{equation}
 
+\begin{equation}
+	M_\nu = 
+	\begin{pmatrix}
+	1 & 1 & 1 & 1\\
+	\end{pmatrix}
+\end{equation}
 
 \end{document}
 
