--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -15,7 +15,7 @@
 \newcommand{\LiEin}[1]{\myconc{\left\lbrace\mychem{Li}_{#1}\mychem{E}\right\rbrace_{in}}}
 \newcommand{\LiEout}[1]{\myconc{\left\lbrace\mychem{Li}_{#1}\mychem{E}\right\rbrace_{out}}}
 \newcommand{\LiIn}[1]{\myconc{\mychem{Li}_{#1}^{in}}}
-\newcommand{\LiOut}[1]{\myconc{\mychem{Li}_{#1}}}
+\newcommand{\LiOut}[1]{\myconc{\mychem{Li}_{#1}^{out}}}
 \newcommand{\EHin}{\myconc{\mychem{EH}}}
 \newcommand{\Eout}{\myconc{\mychem{E}}}
 \newcommand{\Hin}{\myconc{\mychem{H}}}
@@ -32,6 +32,7 @@
 \end{equation}
 
 \section{Full System}
+\subsection{Description}
 \begin{equation}
 \displaystyle
 \left\lbrace
@@ -40,8 +41,8 @@
 \\
 \partial_t \EHin     & = & \sum_{x=6,7}\left( k_p^x \Hin \LiEin{x} - k_q^x \EHin \LiIn{x}\right) - k_h \EHin \\
 \\
-\partial_t \LiEin{x} & = & -k_p^x \Hin \LiEin{x} + k_q^x \EHin \LiIn{x}
-+ k_f^x \LiEout{x} - k_r^x \LiEin{x}\\
+\partial_t \LiEin{x} & = & -\left(k_p^x \Hin + k_r^x\right) \LiEin{x} + k_q^x \EHin \LiIn{x}
++ k_f^x \LiEout{x} \\
 \\
 \partial_t \LiEout{x} & = & k_r^x \LiEin{x} - (k_f^x+k_d^x) \LiEout{x} + k_a^x \LiOut{x} \Eout \\
 \\
@@ -49,6 +50,32 @@ E_0 & = & \Eout + \EHin + \LiEin{6} + \LiEout{6} + \LiEin{7}+\LiEout{7}\\
 \end{array}
 \right.
 \end{equation}
+
+\subsection{Steady}
+We have the intrinsic substitutions
+\begin{equation}
+	\LiEout{x} = \dfrac{k_r^x}{k_f^x+k_d^x} \LiEin{x} + \dfrac{k_a^x\LiOut{x}}{k_f^x+k_d^x} \Eout
+\end{equation}
+
+\begin{equation}
+	\EHin = \dfrac{k_p^6 \LiEin{6} + k_p^7 \LiEin{7}}{k_h+k_q^6\LiIn{6}+k_q^7\LiIn{7}}\Hin
+\end{equation}
+
+\begin{equation}
+\displaystyle
+\left\lbrace
+\begin{array}{rcl}
+\partial_t\LiIn{x}   & = & k_p^x \Hin \LiEin{x} - k_q^x \EHin \LiIn{x} \\
+\\
+\partial_t \LiEin{x} & = & -\left(k_p^x \Hin + k_r^x\right) \LiEin{x} + k_q^x \EHin \LiIn{x}
++ k_f^x \LiEout{x} \\
+\\
+E_0 & = & \Eout + \EHin + \LiEin{6} + \LiEout{6} + \LiEin{7}+\LiEout{7}\\
+\end{array}
+\right.
+\end{equation}
+
+
 
 The steady state concentrations are given by
 \begin{equation}
@@ -81,6 +108,7 @@ The steady state concentrations are given by
 	0\\
 	\end{pmatrix}
 \end{equation}
+\end{document}
 
 \section{One Lithium Only}
 \begin{equation}
@@ -91,8 +119,8 @@ The steady state concentrations are given by
 \\
 \partial_t \EHin     & = & \left( k_p^\nu \Hin \LiEin{\nu} - k_q^\nu \EHin \LiIn{\nu}\right) - k_h \EHin \\
 \\
-\partial_t \LiEin{\nu} & = & -k_p^\nu \Hin \LiEin{\nu} + k_q^\nu \EHin \LiIn{\nu}
-+ k_f^\nu \LiEout{\nu} - k_r^\nu \LiEin{\nu}\\
+\partial_t \LiEin{\nu} & = & -\left(k_p^\nu \Hin+k_r^\nu\right) \LiEin{\nu} + k_q^\nu \EHin \LiIn{\nu}
++ k_f^\nu \LiEout{\nu} \\ % - k_r^\nu \LiEin{\nu}\\
 \\
 \partial_t \LiEout{\nu} & = & k_r^\nu \LiEin{\nu} - (k_f^\nu+k_d^\nu) \LiEout{\nu} + k_a^\nu \LiOut{\nu} \Eout \\
 \\
@@ -129,6 +157,12 @@ We have the matrix such that
 	0 & k_q^\nu\LiIn{\nu} & -(k_p^\nu \Hin+k_r^\nu) & k_f^\nu\\
 	k_a^\nu\LiOut{\nu} & 0 & k_r^\nu & - (k_f^\nu+k_d^\nu)
 	\end{pmatrix}
+\end{equation}
+
+\section{Resolution}
+As it is an intermediate
+\begin{equation}
+	\LiEout{x} = \dfrac{k_r^x}{k_f^x+k_d^x} \LiEin{x} + \dfrac{k_a^x\LiOut{x}}{k_f^x+d_d^x} \Eout
 \end{equation}
 
 \end{document}
