--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -51,6 +51,62 @@ E_0 & = & \Eout + \EHin + \LiEin{6} + \LiEout{6} + \LiEin{7}+\LiEout{7}\\
 \right.
 \end{equation}
 
+We have the intrinsic part that dispatch $\LiEin{x}$ and $\LiEout{x}$
+
+\begin{equation}
+\begin{pmatrix}
+	\left(k_f^x+k_d^x\right) & -k_r^x\\
+	-k_f^x & \left(k_r^x+k_p^x\Hin\right)\\
+\end{pmatrix}
+\begin{pmatrix}
+	\LiEout{x}\\
+	\LiEin{x}\\
+\end{pmatrix}
+=
+	\begin{pmatrix}
+	k_a^x & 0 \\
+	0     & k_q^x \\
+	\end{pmatrix}
+	\begin{pmatrix}
+	\LiOut{x} & 0 \\
+	0     & \LiIn{x} \\
+	\end{pmatrix}
+	\begin{pmatrix}
+	\Eout\\
+	\EHin\\
+	\end{pmatrix}
+\end{equation}
+so that
+\begin{equation}
+	\begin{pmatrix}
+	\LiEout{x}\\
+	\LiEin{x}\\
+\end{pmatrix}
+= \dfrac{1}{\delta_x} 
+\begin{pmatrix}
+	\left(k_r^x+k_p^x\Hin\right) & k_r^x\\
+	k_f^x & \left(k_f^x+k_d^x\right)\\
+\end{pmatrix}
+\begin{pmatrix}
+	k_a^x & 0 \\
+	0     & k_q^x \\
+	\end{pmatrix}
+	\begin{pmatrix}
+	\LiOut{x} & 0 \\
+	0     & \LiIn{x} \\
+	\end{pmatrix}
+	\begin{pmatrix}
+	\Eout\\
+	\EHin\\
+	\end{pmatrix}
+\end{equation}
+and
+\begin{equation}
+\delta_x = k_d^x k_r^x + k_p^x \Hin \left(k_f^x+k_d^x\right)
+\end{equation}
+
+\end{document}
+
 The steady state concentrations are given by
 \begin{equation}
 \begin{pmatrix}
