--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -181,7 +181,15 @@ We use
 	\kappa_x\Lambda_x - A_x \Theta_x  =
 	\left(I_2 - \dfrac{1}{\delta_x}A_xS_x\right)\kappa_x\Lambda_x
 \end{equation}	
-
+and find that
+\begin{equation}
+	\mytrn{\vec{p}} \left(I_2 - \dfrac{1}{\delta_x}A_xS_x\right) = 
+	\begin{pmatrix}
+	0 &
+	\dfrac{1}{1+h/J_x} 
+	\\
+	\end{pmatrix}, \;\; J_x = \dfrac{k_d^x k_r^x}{k_p^x\left(k_f^x + k_d^x \right)}
+\end{equation}
 \end{document}
 
 The steady state concentrations are given by
