need to factorize and finish computation

--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -167,6 +167,15 @@ we get
 			\right)
 			-\left(k_h + k_q^6 \LiIn{6} + k_q^7 \LiIn{7} \right) \EHin
 		  \\
+		  & = & \Hin \left(
+			\mytrn{\vec{p}} 
+			\left(
+			k_p^6\Theta_6 + k_p^7 \Theta_7
+			\right)
+			\vec{\mathcal{E}}
+			\right)
+			-\mytrn{\vec{p}} \left(B+\kappa_6\Lambda_6+\kappa_7\Lambda_7\right) \vec{\mathcal{E}}
+\\
 	\end{array}
 \end{equation}
 and finally
