Almost done simplifying

--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -176,9 +176,44 @@ we get
 			\right)
 			-\mytrn{\vec{p}} \left(B+\kappa_6\Lambda_6+\kappa_7\Lambda_7\right) \vec{\mathcal{E}}
 \\
+ & = & 
+ \mytrn{\vec{p}} \left\lbrack
+  \dfrac{1}{\delta_6} \left(k_p^6 \Hin S_6 -\delta_6I_2\right)\kappa_6\Lambda_6 
+ +\dfrac{1}{\delta_7} \left(k_p^7 \Hin S_7 -\delta_7I_2\right)\kappa_7\Lambda_7 
+ - B
+ \right\rbrack \vec{\mathcal{E}}
+ \\
 	\end{array}
 \end{equation}
-and finally
+
+We are left with
+\begin{equation}
+\begin{array}{rcl}
+	0 & = & \left\lbrack \dfrac{1}{\delta_6}
+	\begin{pmatrix} 
+	k_f^6 k_p^6 \Hin &
+	-k_d^6 k_r^6
+	\end{pmatrix}
+	\kappa_6\Lambda_6 
+	+ 
+	\dfrac{1}{\delta_7}
+	\begin{pmatrix} 
+	k_f^7 k_p^7 \Hin &
+	-k_d^7 k_r^7
+	\end{pmatrix}
+	\kappa_7\Lambda_7 
+	-
+	\begin{pmatrix} 
+	0 &  k_h
+	\end{pmatrix}
+	\right\rbrack \vec{\mathcal{E}}
+	\\
+	E_0 & = & \mytrn{\vec{\sigma}}
+	\left(I_2+\dfrac{1}{\delta_6}S_6\kappa_6\Lambda_6 
+	+\dfrac{1}{\delta_7}S_7\kappa_7\Lambda_7 \right) \vec{\mathcal{E}}\\
+\end{array}
+\end{equation}
+
 
 \end{document}
 
