--- a/src/lithium/doc/lithium3.tex
+++ b/src/lithium/doc/lithium3.tex
@@ -213,7 +213,13 @@ We are left with
 	+\dfrac{1}{\delta_7}S_7\kappa_7\Lambda_7 \right) \vec{\mathcal{E}}\\
 \end{array}
 \end{equation}
-
+and we got
+\begin{equation}
+	\mytrn{\vec{\sigma}} S_6 =
+	\begin{pmatrix}
+	\left(k_f^6+k_r^6\right) + k_p^6 \Hin & \left(k_f^6+k_r^6\right) + k_d^6\\
+	\end{pmatrix}
+\end{equation}
 
 \end{document}
 
