--- a/src/lithium/doc/lithium4.tex
+++ b/src/lithium/doc/lithium4.tex
@@ -70,7 +70,7 @@ E_0 & = & \Eout + \EHin + \LiEin{6} + \LiEout{6} + \LiEin{7}+\LiEout{7}\\
 \right.
 \end{equation}
 
-
+\subsection{Forward Resolution}
 We have the intrinsic part that dispatch $\LiEin{x}$ and $\LiEout{x}$
 
 \begin{equation}
@@ -176,6 +176,7 @@ we get
 	\EHin = \Eout
 	\dfrac{\dfrac{\alpha_6}{\delta_6}+\dfrac{\alpha_7}{\delta_7}}
 	{k_h+\dfrac{\beta_6}{\delta_6}+\dfrac{\beta_7}{\delta_7}}
+	= \rho \Eout
 \end{equation}
 
 We note that
@@ -197,7 +198,22 @@ and that
 \end{equation}
 we get
 \begin{equation}
+	E_0 = \left\lbrack
+	1 + \dfrac{\gamma'_6}{\delta_6} + \dfrac{\gamma'_7}{\delta_7}
+	\right\rbrack \Eout
+	+
+	\left\lbrack
+	1 + \dfrac{\eta'_6}{\delta_6} + \dfrac{\eta'_7}{\delta_7}
+	\right\rbrack \EHin
+	= \lambda\Eout + \mu\EHin = \left(\lambda + \mu \rho\right) \Eout
+\end{equation}
 
+\subsection{Reverse Resolution}
+\begin{equation}
+	\Eout = \dfrac{E_0}{\lambda + \mu \rho}
+\end{equation}
+\begin{equation}
+	\EHin = E_0 \dfrac{\rho}{\lambda + \mu \rho}
 \end{equation}
 
 \end{document}
